# shared_class

./: .gitignore  CMakeLists.txt  libfirst_lib_hexdump.txt  main.cxx
libs/: CMakeLists.txt  first_lib.cxx
